# vibravox

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  asr_vibravox.py  dataloader.py  nohup_asr_vibravox.py  nohup_prepare_data.py  prepare_data.py  pyproject.toml  requierements.txt  requirements.txt  run.py  test_model.py  train.py  train_model.py  vibravox_model_checkpoint.py
.github/workflows/: publish.yml  python-tests.yml
configs/: config.yaml  run.yaml  spkv_test.yaml  test_spkv.yaml  train.yaml  train_bwe.yaml
configs/callbacks/: bwe_checkpoint.yaml  callbacks.yaml  callbacks_10h.yaml  callbacks_10min.yaml  rich_model_summary.yaml  stp_checkpoint.yaml
configs/data_module/: bwe.yaml  data_module.yaml  data_module_10h.yaml  data_module_10min.yaml
configs/hparam_dict/: hparam_dict.yaml
configs/lightning_datamodule/: asr.yaml  bwe.yaml  noisybwe.yaml  spkv.yaml  stp.yaml
configs/lightning_module/: eben.yaml  ecapa2.yaml  regressive_mimi.yaml  (+1 more)
lr_scheduler/: tri_stage_lr_scheduler.py
scripts/: eben_enhanced_vibravox.py  gen_pairs_for _spkv.py  gen_pairs_for_spkv.py  number_of_spkv_pairs_from_pkl.py  push_dis_to_hub.py  run_JZ.sh  run_all_bwe_JZ.sh  run_all_stp.sh  run_bwe_slurm_array_JZ.sh  run_spkv_slurm_array_JZ.sh  run_stp_slurm_array_JZ.sh  single_run_JZ.sh  test_all_phonemizer.py  test_all_phonemizers.py  train_JZ.sh  upload_eben_to_hub.py  upload_phonemizer_to_hub.py  upload_synthetic.py  upload_vibravox_mixed_for_spkv.py
src/: train.py
tests/: conftest.py
tmp/: run_all_stp.sh
vibravox/: utils.py
(+116 files in other folders)
