[project]
name = "vibravox"
version = "0.1.1"
description = "Speech to Phoneme, Bandwidth Extension and Speaker Verification using the Vibravox dataset."
authors = [{ name = "Julien Hauret", email = "j.hauret.33@gmail.com" }]
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
    "moshi==0.2.4",
    "isort",
    "lightning",
    "torchaudio",
    "torchmetrics[audio]",
    "hydra-core",
    "rich",
    "tensorboard",
    "datasets[audio]",
    "huggingface_hub[cli]",
    "transformers",
    "pytest",
    "auraloss",
    "levenshtein"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vibravox*"]
